<resources>
    <string name="app_name">droidApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Order_Icecream">Icecream order</string>
    <string name="Order_Donut">Donut order</string>
    <string name="Order_Froyo">Froyo order</string>
    <string name="choose_delivery_method">Choose Delivery Method</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_service">Next day ground service</string>
    <string name="pick_up">Pick up</string>
    <string name="about_us">About us</string>
    <string name="order">Order</string>
    <string name="status">Status</string>
    <string name="call">Call Us</string>
    <string name="locate_us">Locate Us</string>
</resources>
