<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/Display_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/Delivery_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/choose_delivery_method"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/Display_order"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/Delivery_method">
    <RadioButton
        android:id="@+id/Delivery_SameDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

 android:text="@string/same_day_messenger_service"
        android:textColor="@color/colorPrimaryDark"

        android:onClick="onRadioButtonClicked"
/>
        <RadioButton
        android:id="@+id/Delivery_NextDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/next_day_ground_service"
        android:textColor="@color/colorPrimaryDark"

        android:onClick="onRadioButtonClicked"
        />
        <RadioButton
            android:id="@+id/Delivery_Pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/pick_up"
            android:textColor="@color/colorPrimaryDark"

            android:onClick="onRadioButtonClicked"
            />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>